# database_etl

./: .gitignore  README.md  pyproject.toml
database_etl/: __init__.py  definitions.py  queries.py  run_extractor.py
database_etl/code/: gradient_elution_by_tbl_num.sql
database_etl/code/bin_pumps_to_db/: __init__.py  bin_pump_to_db_.py  sql_to_xr.ipynb  test.ipynb  test_subsetting_time.ipynb
database_etl/code/bin_pumps_to_db/queries/: load_solvcomps.sql  load_timetables.sql  to_db.sql
database_etl/code/chm_extractor/: __init__.py  chm_extractor.py
database_etl/code/sql_to_xr/: __init__.py  sql_to_xr.py
database_etl/data/: clean_cellar_tracker.parquet  clean_sample_tracker.parquet  dirty_cellar_tracker.csv  dirty_sample_tracker.parquet  dirty_sample_tracker_names_corrected.parquet
database_etl/data/original_sample_tracker/: README.md  original_dirty_sample_tracker.csv
database_etl/data/raw_uv_3.17_grad/096.D/: ACQRES.REG  CSlbk.ini  DAD1.UV  DAD1G.ch  SAMPLE.XML  SAMPLE.XML.bak  acq.macaml  acq.txt  sequence.acam_
database_etl/data/raw_uv_3.17_grad/096.D/RUN.M/: Agilent1200erDadDriver1.RapidControl.ConfigXML.xml  Agilent1200erDadDriver1.RapidControl.MethodMetaData.xml  AgilentColumnCompDriver1.RapidControl.MethodXML.xml  AgilentPumpDriver1.RapidControl.MethodXML.xml  AgilentSamplerDriver1.RapidControl.ConfigXML.xml  AgilentSamplerDriver1.RapidControl.MethodMetaData.xml  DAMETHOD.REG
database_etl/data/raw_uv_3.17_grad/096.D/extract_2024-09-18T212601/: data.parquet  metadata.parquet
database_etl/data/raw_uv_3.17_grad/097.D/: ACQRES.REG  CSlbk.ini  DAD1.UV  DAD1G.ch  SAMPLE.XML  SAMPLE.XML.bak  acq.macaml  acq.txt  sequence.acam_
database_etl/data/raw_uv_3.17_grad/097.D/RUN.M/: Agilent1200erDadDriver1.RapidControl.MethodXML.xml  AgilentColumnCompDriver1.RapidControl.ConfigXML.xml  AgilentPumpDriver1.RapidControl.MethodMetaData.xml
database_etl/data/raw_uv_3.17_grad/097.D/extract_2024-09-18T212634/: data.parquet  metadata.parquet
database_etl/data/raw_uv_3.17_grad/099.D/: ACQRES.REG  CSlbk.ini  DAD1.UV  DAD1G.ch  SAMPLE.XML  SAMPLE.XML.bak  acq.macaml  acq.txt  sequence.acam_
database_etl/data/raw_uv_3.17_grad/099.D/RUN.M/: AgilentColumnCompDriver1.RapidControl.MethodMetaData.xml  AgilentPumpDriver1.RapidControl.ConfigXML.xml  AgilentSamplerDriver1.RapidControl.MethodXML.xml  AgilentSamplerDriver1.RapidControl.PretreatXML.xml  DAMETHOD.REG
database_etl/data/raw_uv_3.17_grad/099.D/extract_2024-09-18T212633/: data.parquet  metadata.parquet
database_etl/etl/: __init__.py  etl_pipeline_raw.py
database_etl/etl/ch_extractor/: chm_extractor.py
database_etl/etl/chm_extractor/: chm_extractor.py
database_etl/etl/sql/: __init__.py  etl_pipeline_raw.py  get_selected_runs.py
database_etl/etl/sql/cs/: __init__.py  load_cs_stats.py  preprocess.py
database_etl/etl/sql/ct/: __init__.py  clean_load_ct.sql  load_cellartracker.py
database_etl/etl/sql/excluded/: __init__.py  excluded_tbl.py
database_etl/etl/sql/raw_chm/: __init__.py  clean_load_raw_chm.py  clean_load_raw_chm.sql
database_etl/etl/sql/raw_chm/bin_pumps_to_db/: __init__.py  bin_pump_to_db_.py  load_bin_pump_tbls.py  normalise_bin_pump_tbls.py  sample_gradients.py
database_etl/etl/sql/raw_chm/queries/: create_chm.sql  create_chm_loading.sql  create_sequences.sql  make_runids_unique.sql
database_etl/etl/sql/raw_st/: __init__.py  clean_load_raw_st.py  create_st.sql  create_st_loading.sql  load_raw_st.sql
database_etl/etl/sql/to_xr/: __init__.py  sql_to_xr.py
database_etl/etl/to_xr/: __init__.py  sql_to_xr.py
database_etl/notebooks/: clean_and_load_chm.ipynb  correcting_sampletracker_name.ipynb  creating_excluded_list_for_outliers.ipynb  demonstration.ipynb  extracting_binary_pump_tables.ipynb  load_cs_stats.ipynb  load_ct.ipynb  load_st.ipynb  normalising_bin_pump.ipynb  prototype_chm_extracter_2.ipynb  samples_by_gradient.ipynb  sql_to_xr.ipynb  test_jupysql_doesnt_work.ipynb
tests/: test_database_etl.py
tests/test_data/013.D/extract_2024-09-24T132415/: data.parquet
tests/test_data/054.D/extract_2024-09-24T132415/: data.parquet
tests/test_data/061.D/extract_2024-09-24T132415/: data.parquet
tests/test_data/089.D/extract_2024-09-24T132415/: data.parquet
(+2 files in other folders)
