[tool.poetry]
name = "database-etl"
version = "0.1.0"
description = ""
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.dependencies]
python = ">=3.12.2, <4.0"
cellartracker = "1.1.1"
duckdb = "1.1.0"
fonttools = "4.39.4"
fuzzywuzzy = "0.18.0"
gitpython = "3.1.31"
httplib2 = "0.22.0" 
idna = "3.4"
importlib-metadata = "6.6.0"
iniconfig = "2.0.0"
jsonschema = ">=4.18.0"
kiwisolver = "1.4.4"
lxml = "5.2.2"
markdown-it-py = "2.2.0"
markupsafe = "2.1.2"
matplotlib = "^3.9.2"
mdurl = "0.1.2"
numpy = "1.26.4"
oauthlib = "3.2.2"
packaging = "23.1"
pandas = "^2.2.2"
pillow = "9.5.0"
pipreqs = "0.4.13"
pluggy = "^1.5"
protobuf = "3.20.3"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pydeck = "0.8.1b0"
pympler = "1.0.1"
pyparsing = "3.0.9"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
python-lzf = "0.2.4"
pytz = "2023.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
smmap = "5.0.0"
tenacity = "8.2.2"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.3.2"
typing-extensions = "4.10.0"
tzdata = "2023.3"
tzlocal = "5.0.1"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
validators = "0.20.0"
yarg = "0.1.9"
zipp = "3.15.0"
gspread = "^5.12.4"
directory-tree = "^0.0.3.1"
sqlalchemy = "^2.0.30"
duckdb-engine = "^0.9.0"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"
kaleido = "0.2.1"
xhtml2pdf = "^0.2.11"
pdf-reports = "^0.3.4"
jupyter-contrib-nbextensions = "^0.7.0"
pyppeteer = "^1.0.2"
pyqt6 = "^6.7.0"
tabulate = "^0.9.0"
pre-commit = "^3.7.1"
ipympl = "^0.9.3"
pandera = "^0.16.1"
ipython = "^8.24.0"
rapidfuzz = "^3.9.1"
rainbow-api = {git = "https://github.com/jonathanstathakis/rainbow.git"}
python-levenshtein = "^0.25.1"
ruff = "^0.4.5"
jupyter = "^1.0.0"
nbconvert = "^7.16.4"
deprecated = "^1.2.14"
sqlparse = "^0.5.1"
jupysql = "^0.10.13"
jupyterlab = "^4.2.5"
sqlfluff = "^3.1.1"
xmltodict = "^0.13.0"
polars = "^1.7.1"
xarray = "^2024.9.0"
scipy = "^1.14.1"
altair = "5.4.0"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
