[tool.poetry]
name = "database-etl"
version = "0.1.2"
description = ""
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.dependencies]
python = ">=3.12.2, <4.0"
cellartracker = "1.1.1"
duckdb = "1.1.0"
fuzzywuzzy = "0.18.0"
numpy = "2.1.1"
pandas = "^2.2.2"
ipython = "^8.24.0"
rainbow-api = {git = "https://github.com/jonathanstathakis/rainbow.git"}
deprecated = "^1.2.14"
sqlparse = "^0.5.1"
xmltodict = "^0.13.0"
polars = "^1.7.1"
xarray = "^2024.9.0"
pyarrow = "^17.0.0"
scipy = "^1.14.1"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
